--- a/apps/web/web/static/css/app.css
+++ b/apps/web/web/static/css/app.css
@@ -1,9 +1,10 @@
 /* This file is for your main application css. */
 #cy {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 90%;
   position: absolute;
   left: 0;
   top: 0;
   z-index: 999;
+  background-color: black;
 }
