--- a/apps/web/web/templates/layout/app.html.eex
+++ b/apps/web/web/templates/layout/app.html.eex
@@ -15,6 +15,9 @@
 
   <body>
     <div id="cy"> </div>
-    <script> require("web/static/js/app").App.run() </script>
+    <script>
+      let app = require("web/static/js/app").App;
+      setTimeout(() => app.run(), 5000);
+    </script>
   </body>
 </html>
